// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoDataCard props button 1`] = `
<div
  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  data-test-subj="kbnRedirectAppLink"
>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard emotion-euiPanel-grow-m-l-plain-hasShadow-isClickable-EuiCard"
  >
    <div
      class="euiCard__main emotion-euiCard__main-vertical"
    >
      <div
        class="euiCard__top emotion-euiCard__top-vertical"
      >
        <div
          class="euiCard__image emotion-euiCard__image"
        >
          <figure
            class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
          >
            <img
              alt=""
              class="euiImage emotion-euiImage-fullWidth"
              src="test-file-stub"
              style="width:max(100%, 360px);height:240px;object-fit:cover;background:aliceblue"
            />
          </figure>
        </div>
      </div>
      <div
        class="euiCard__content emotion-euiCard__content-vertical"
      >
        <p
          class="euiTitle euiCard__title emotion-euiTitle-s"
          id="generated-idTitle"
        >
          <a
            aria-describedby="generated-idDescription"
            class="euiCard__titleAnchor emotion-euiCard__text-center-interactive"
            href="/app/integrations/browse"
            rel="noreferrer"
          >
            <span
              class="emotion-euiScreenReaderOnly"
            >
              Card title
            </span>
          </a>
        </p>
        <div
          class="euiText emotion-euiText-s-euiCard__description"
          id="generated-idDescription"
        >
          <p>
            Description
          </p>
        </div>
      </div>
      <div
        class="emotion-euiCard__footer"
      >
        <a
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
          data-test-subj="noDataDefaultFooterAction"
          href="/app/integrations/browse"
          rel="noreferrer"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Button
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoDataCard props extends EuiCardProps 1`] = `
<div
  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  data-test-subj="kbnRedirectAppLink"
>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard custom_class emotion-euiPanel-grow-m-l-plain-hasShadow-isClickable-EuiCard"
  >
    <div
      class="euiCard__main emotion-euiCard__main-vertical"
    >
      <div
        class="euiCard__top emotion-euiCard__top-vertical"
      >
        <div
          class="euiCard__image emotion-euiCard__image"
        >
          <figure
            class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
          >
            <img
              alt=""
              class="euiImage emotion-euiImage-fullWidth"
              src="test-file-stub"
              style="width:max(100%, 360px);height:240px;object-fit:cover;background:aliceblue"
            />
          </figure>
        </div>
      </div>
      <div
        class="euiCard__content emotion-euiCard__content-vertical"
      >
        <p
          class="euiTitle euiCard__title emotion-euiTitle-s"
          id="generated-idTitle"
        >
          <a
            aria-describedby="generated-idDescription"
            class="euiCard__titleAnchor emotion-euiCard__text-center-interactive"
            href="/app/integrations/browse"
            rel="noreferrer"
          >
            <span
              class="emotion-euiScreenReaderOnly"
            >
              Card title
            </span>
          </a>
        </p>
        <div
          class="euiText emotion-euiText-s-euiCard__description"
          id="generated-idDescription"
        >
          <p>
            Description
          </p>
        </div>
      </div>
      <div
        class="emotion-euiCard__footer"
      >
        <a
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
          data-test-subj="noDataDefaultFooterAction"
          href="/app/integrations/browse"
          rel="noreferrer"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Button
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoDataCard props href 1`] = `
<div
  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  data-test-subj="kbnRedirectAppLink"
>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard emotion-euiPanel-grow-m-l-plain-hasShadow-isClickable-EuiCard"
  >
    <div
      class="euiCard__main emotion-euiCard__main-vertical"
    >
      <div
        class="euiCard__top emotion-euiCard__top-vertical"
      >
        <div
          class="euiCard__image emotion-euiCard__image"
        >
          <figure
            class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
          >
            <img
              alt=""
              class="euiImage emotion-euiImage-fullWidth"
              src="test-file-stub"
              style="width:max(100%, 360px);height:240px;object-fit:cover;background:aliceblue"
            />
          </figure>
        </div>
      </div>
      <div
        class="euiCard__content emotion-euiCard__content-vertical"
      >
        <p
          class="euiTitle euiCard__title emotion-euiTitle-s"
          id="generated-idTitle"
        >
          <a
            aria-describedby="generated-idDescription"
            class="euiCard__titleAnchor emotion-euiCard__text-center-interactive"
            href="#"
            rel="noreferrer"
          >
            <span
              class="emotion-euiScreenReaderOnly"
            >
              Card title
            </span>
          </a>
        </p>
        <div
          class="euiText emotion-euiText-s-euiCard__description"
          id="generated-idDescription"
        >
          <p>
            Description
          </p>
        </div>
      </div>
      <div
        class="emotion-euiCard__footer"
      >
        <a
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
          data-test-subj="noDataDefaultFooterAction"
          href="#"
          rel="noreferrer"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Button
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoDataCard props no access to Fleet 1`] = `
<div
  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  data-test-subj="kbnRedirectAppLink"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiCard emotion-euiPanel-grow-m-l-subdued-EuiCard"
  >
    <div
      class="euiCard__main emotion-euiCard__main-vertical"
    >
      <div
        class="euiCard__top emotion-euiCard__top-vertical-disabled"
      >
        <div
          class="euiCard__image emotion-euiCard__image"
        >
          <figure
            class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
          >
            <img
              alt=""
              class="euiImage emotion-euiImage-fullWidth"
              src="test-file-stub"
              style="width:max(100%, 360px);height:240px;object-fit:cover;background:aliceblue"
            />
          </figure>
        </div>
      </div>
      <div
        class="euiCard__content emotion-euiCard__content-vertical"
      >
        <p
          class="euiTitle euiCard__title emotion-euiTitle-s"
          id="generated-idTitle"
        >
          <button
            aria-describedby=" generated-idDescription"
            class="euiCard__titleButton emotion-euiCard__text-center-disabled"
            disabled=""
          >
            <span
              class="emotion-euiTextColor-default"
            >
              Contact your administrator
            </span>
          </button>
        </p>
        <div
          class="euiText emotion-euiText-s-euiCard__description"
          id="generated-idDescription"
        >
          <p>
            <span
              class="emotion-euiTextColor-default"
            >
              This integration is not yet enabled. Your administrator has the required permissions to turn it on.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoDataCard renders 1`] = `
<div
  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  data-test-subj="kbnRedirectAppLink"
>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard emotion-euiPanel-grow-m-l-plain-hasShadow-isClickable-EuiCard"
  >
    <div
      class="euiCard__main emotion-euiCard__main-vertical"
    >
      <div
        class="euiCard__top emotion-euiCard__top-vertical"
      >
        <div
          class="euiCard__image emotion-euiCard__image"
        >
          <figure
            class="euiImageWrapper emotion-euiImageWrapper-fullWidth"
          >
            <img
              alt=""
              class="euiImage emotion-euiImage-fullWidth"
              src="test-file-stub"
              style="width:max(100%, 360px);height:240px;object-fit:cover;background:aliceblue"
            />
          </figure>
        </div>
      </div>
      <div
        class="euiCard__content emotion-euiCard__content-vertical"
      >
        <p
          class="euiTitle euiCard__title emotion-euiTitle-s"
          id="generated-idTitle"
        >
          <a
            aria-describedby="generated-idDescription"
            class="euiCard__titleAnchor emotion-euiCard__text-center-interactive"
            href="/app/integrations/browse"
            rel="noreferrer"
          >
            <span
              class="emotion-euiScreenReaderOnly"
            >
              Card title
            </span>
          </a>
        </p>
        <div
          class="euiText emotion-euiText-s-euiCard__description"
          id="generated-idDescription"
        >
          <p>
            Description
          </p>
        </div>
      </div>
      <div
        class="emotion-euiCard__footer"
      >
        <a
          class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-fill-primary"
          data-test-subj="noDataDefaultFooterAction"
          href="/app/integrations/browse"
          rel="noreferrer"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Card title
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;
